--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head><title>title</title></head>
+  
+  <body>
+   <header>
+    <nav>
+      <ul>
+        <li>dogs</li>
+        <li>puppies</li>
+      </ul>
+    </nav>
+    <h3>Animals</h3>
+    </header>
+  </body>
+  
+</html>
