--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+    <head><title>Animal</title></head>
+    <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Dogs</li>
+          <li>Puppies</li>
+        </ul>
+      </nav>
+      <h3>Animals</h3>
+    </header>
+  </body>
+  
+</html>
