--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Haley Keizur's Journalism Portfolio</title>
+    </head>
+  
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Writing</li>
+          <li>Photojournalism</li>
+        </ul>
+      </nav>
+      <h3>I love journalism!!</h3>
+      
+    </header>
+    
+  </body>
+  
+</html>
 
