--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-<!-- Write your HTML in this file -->
-
+ <!DOCTYPE html>
+<html>
+  <head>
+    <title>Kode With Klossy</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>home</li>
+          <li>about</li>
+        </ul>
+      </nav>
+      <h3>Klossy Possy</h3>
+    </header>
+  </body>
+</html>
