--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Kode with Klossy</title>
+  </head>
+  
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>home</li>
+          <li>about</li>
+        </ul>
+      </nav>
+      <h3>
+        Klossy Possy
+      </h3>
+    </header>
+  </body>
+</html>
