--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Natman</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li></li>
+          <li></li>
+        </ul>
+      </nav>
+      <h3>Batman</h3>
+    </header>
+  </body>
+</html>
